--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,22 @@ input[type = "password"] {
     @apply border p-2 border-gray-300 bg-gray-100;
 }
 
+input[type = "email"]:disabled, 
+input[type = "text"]:disabled, 
+input[type = "password"]:disabled {
+    @apply bg-gray-300 cursor-not-allowed;
+}
+
 button{
     @apply block w-full text-gray-700 font-semibold;
     @apply border rounded-xl border-gray-300 px-6 py-2;
 }
 
 button[type="submit"], .submit{
-    @apply border-0 bg-primary
+    @apply border-0 bg-primary text-white;
+}
+button[type="submit"]:disabled, .submit:disabled{
+    @apply cursor-not-allowed bg-red-400;   
 }
 
 .login{
